# leetcode-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  install.sh  rust-toolchain.toml  rustfmt.toml  todo.md
.github/workflows/: check.yml  dependency-review.yml  safety.yml  scheduled.yml  scorecards.yml  test.yml
0001_two_sum/: Cargo.toml  README.md  test_cases.json
0001_two_sum/src/: lib.rs
0002_add_two_numbers/: Cargo.toml  README.md  test_cases.json
0002_add_two_numbers/src/: lib.rs
examples/0001_two_sum/: README.md  test_cases.json
examples/0001_two_sum/src/: lib.rs
src/: api.rs  config.rs  lib.rs  main.rs  problem.rs  template.rs  test_runner.rs
src/commands/: download.rs  list.rs  login.rs  mod.rs  pick.rs  show.rs  submit.rs  test.rs
src/problems/: mod.rs  p0001_two_sum.rs  p0002_add_two_numbers.rs  p0003_longest_substring_without_repeating_characters.rs
src/problems/test_cases/: p0002_add_two_numbers.json  p0003_longest_substring_without_repeating_characters.json
src/solutions/: mod.rs  p0001_two_sum.rs  p0002_add_two_numbers.rs  p0003_longest_substring_without_repeating_characters.rs  p0005_longest_palindromic_substring.rs  p0007_reverse_integer.rs  p0009_palindrome_number.rs  p0099_recover_binary_search_tree.rs  p0121_best_time_to_buy_and_sell_stock.rs  p0452_minimum_number_of_arrows_to_burst_balloons.rs  p0922_sort_array_by_parity_ii.rs  p0958_check_completeness_of_a_binary_tree.rs  p2038_remove_colored_pieces_if_both_neighbors_are_the_same_color.rs  p2437_number_of_valid_clock_times.rs  p2465_number_of_distinct_averages.rs  p2739_total_distance_traveled.rs  p2858_minimum_edge_reversals_so_every_node_is_reachable.rs  p3530_odd_and_even_transactions.rs  p3753_total_waviness_of_numbers_in_range_ii.rs
