[package]
name = "leetcode-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for LeetCode practice"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# JSON serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI arguments
clap = { version = "4.0", features = ["derive"] }

# Configuration management
confy = "0.5"

# Terminal UI
colored = "2.0"
indicatif = "0.17"
console = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTML parsing (for problem description)
scraper = "0.18"

# Code generation
handlebars = "4.3"

# Authentication
cookie = "0.17"

# Random selection
rand = "0.8"
tempfile = "3.3"

[profile.release]
opt-level = 3
lto = true
