[package]
name = "leetcode-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for LeetCode practice"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
confy = "2.0"
console = "0.16"
cookie = "0.17"
indicatif = "0.18"
handlebars = "6.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true

[package.metadata.cargo-machete]
ignored = [
    "console",
    "indicatif",
    "handlebars",
    "cookie",
    "thiserror",
    "scraper",
]
