[package]
name = "leetcode-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for LeetCode practice"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
confy = "2.0"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "cookies"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serial_test = "3.4"
tempfile = "3.26"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
